# cringine

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cpp.yml  linux_build.yml  macos_build.yml  windows_build.yml
cmake/: assimp.cmake
examples/test/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  CMakeSources.txt
libs/core/cringine/core/: engine.cpp  engine.hpp
libs/event_system/: CMakeLists.txt  CMakeSources.txt
libs/event_system/cringine/event_system/: event_system.hpp
libs/event_system/cringine/event_system/events/: all.hpp  char_input.hpp  cursor_focus.hpp  cursor_position.hpp  keyboard_input.hpp  mouse_button_input.hpp  path_drop.hpp  scroll_input.hpp  window_close.hpp  window_focus.hpp  window_iconify.hpp  window_maximize.hpp  window_position.hpp  window_refresh.hpp  window_resize.hpp
libs/event_system/cringine/event_system/input/: input_manager.cpp  input_manager.hpp  keys.hpp
libs/event_system/cringine/event_system/input/glfw/: glfw_input_manager.cpp  glfw_input_manager.hpp  glfw_keys.cpp
libs/event_system/cringine/event_system/internal/: glfw_event_system.cpp  glfw_event_system.hpp
libs/graphics/: CMakeLists.txt  CMakeSources.txt
libs/graphics/cringine/graphics/: camera.cpp  camera.hpp  shader_program.cpp  shader_program.hpp  shader_program_builder.cpp  shader_program_builder.hpp
libs/models/: CMakeLists.txt  CMakeSources.txt
libs/models/cringine/models/: model_loader.cpp  model_loader.hpp
libs/models/cringine/models/internal/: assimp_model_loader.cpp  assimp_model_loader.hpp
libs/models/cringine/models/types/: mesh_model.hpp
libs/renderer/: CMakeLists.txt  CMakeSources.txt
libs/renderer/cringine/renderer/: mesh_renderer.cpp  mesh_renderer.hpp  renderer.hpp  renderer_initializer.cpp  renderer_initializer.hpp  renderer_utils.cpp  renderer_utils.hpp
libs/renderer/cringine/renderer/types/: rendered_mesh.cpp  rendered_mesh.hpp
libs/shaders/: CMakeLists.txt  CMakeSources.txt
libs/shaders/cringine/shaders/: shader.cpp  shader.hpp  shader_data_binder.cpp  shader_data_binder.hpp  shader_program.cpp  shader_program.hpp  shader_program_builder.cpp  shader_program_builder.hpp  shader_uniform_type.hpp
libs/types/: CMakeLists.txt  CMakeSources.txt
libs/types/cringine/types/: camera.cpp  camera.hpp
libs/types/cringine/types/configuration/: window_configuration.hpp
libs/types/cringine/types/lighting/: all.hpp  directional_light.hpp  light.hpp  point_light.hpp  spot_light.hpp
libs/types/cringine/types/object/: mesh.cpp  mesh.hpp  mesh_data.hpp  texture.hpp  vertex.hpp
libs/utils/: CMakeLists.txt  CMakeSources.txt
libs/utils/cringine/utils/: fps_counter.hpp  load_from_file.cpp  load_from_file.hpp  observer.hpp
libs/window/: CMakeLists.txt  CMakeSources.txt
libs/window/cringine/window/: window.cpp  window.hpp  window_builder.cpp  window_builder.hpp  window_configuration.hpp
libs/window/cringine/window/internal/: glfw_window.cpp  glfw_window.hpp
resources/shaders/2_4_texture_maps/: lamp.fragment  lighting.fragment
resources/shaders/3_3_models/: model.fragment
study/: CMakeLists.txt
study/1_5_shaders/: CMakeLists.txt  main.cpp
study/1_5_shaders/shaders/: shader.fragment  shader.vertex
study/1_6_textures/: CMakeLists.txt  main.cpp
study/1_6_textures/shaders/: shader.vertex
study/1_7_transformations/: CMakeLists.txt  main.cpp
study/1_7_transformations/shaders/: shader.vertex
study/1_8_coord_system/: CMakeLists.txt  main.cpp
study/1_8_coord_system/shaders/: shader.vertex
study/1_9_camera/: CMakeLists.txt  main.cpp
study/1_9_camera/shaders/: shader.fragment  shader.vertex
study/2_1_colors/: CMakeLists.txt  main.cpp
study/2_1_colors/shaders/: light.fragment  shader.fragment
study/2_2_basic_lighting/: CMakeLists.txt  main.cpp
study/2_2_basic_lighting/shaders/: lighting.fragment  lighting.vertex
study/2_3_materials/: CMakeLists.txt  main.cpp
study/2_3_materials/shaders/: lighting.fragment  lighting.vertex
study/2_4_texture_maps/: CMakeLists.txt  main.cpp
study/create_triangle/: CMakeLists.txt  main.cpp
study/create_window/: CMakeLists.txt  main.cpp
