add_subdirectory(create_window)
add_subdirectory(create_triangle)
add_subdirectory(1_5_shaders)
add_subdirectory(1_6_textures)
add_subdirectory(1_7_transformations)
add_subdirectory(1_8_coord_system)
add_subdirectory(1_9_camera)
add_subdirectory(2_1_colors)
add_subdirectory(2_2_basic_lighting)
add_subdirectory(2_3_materials)
add_subdirectory(2_4_texture_maps)
